[package]
name = "manualmap-rs"
version = "0.1.0"
authors = ["lewis <25719980+c4fe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "handleapi", "memoryapi", "winbase", "errhandlingapi", "synchapi"] }
goblin = "0.2.3"
bitflags = "1.2.1"
bytebuffer-rs = "0.3.1"
