[package]
name = "manualmap"
version = "0.1.0"
authors = ["lewis <me@lewis.to>"]
edition = "2018"

[lib]
name = "manualmap"
path = "src/lib.rs"

[[bin]]
name = "manualmap"
path = "src/main.rs"
doc = false

[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "handleapi", "memoryapi", "winbase", "errhandlingapi", "synchapi"] }
pelite = "0.8.1"
bitflags = "1.2.1"
bytebuffer-rs = "0.3.1"
