[package]
name = "jector"
version = "0.1.0"
authors = ["lewis <me@lewis.to>"]
edition = "2018"

[lib]
name = "jector"

[[bin]]
name = "jector"
doc = false

[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "handleapi", "memoryapi", "winbase", "errhandlingapi", "synchapi", "tlhelp32"] }
pelite = "0.8.1"
bitflags = "1.2.1"
field-offset = "0.3.1"
